--- a/Banco/Banco.csproj
+++ b/Banco/Banco.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClasseCBancaria.cs" />
+    <Compile Include="Cliente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
